k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-ns
  labels:
    app: bankapp
