k8/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: bank-ns
spec:
  selector:
    app: mysql
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: mysql-svc
    protocol: TCP
    port: 3306
    targetPort: 3306
