k8/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ing
  namespace: bank-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bankapp.hicloud.co.in
  rules:
  - host: bankapp.hicloud.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bankapp-svc
            port:
              number: 8080
